@@ -12,6 +12,7 @@
   * Move trackable logic to the model.
   * E-mails now use any template available in the filesystem. Easy to create multipart e-mails.
   * E-mails asks headers_for in the model to set the proper headers.
+  * Allow to specify haml in devise_views.
 
 * bug fix
   * Do not use lock! on lockable since it's part of ActiveRecord API.
